# bis

./: .example.env  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  bump_version.py  docker-compose.override.yaml  docker-compose.test.yaml  docker-compose.yaml  tasks.md
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/administration_units/: admin.py  apps.py  models.py  signals.py
backend/api/: helpers.py  urls.py
backend/bis/: admin.py  admin_filters.py  admin_helpers.py  admin_permissions.py  apps.py  cache.py  drive.py  email_validation.py  emails.py  helpers.py  mcp.py  mcp_schema.py  middleware.py  models.py  permissions.py  scheduler.py  signals.py  views.py
backend/categories/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
backend/common/: abstract_models.py  helpers.py  history.py  thumbnails.py
backend/cookbook/: admin.py  apps.py  signals.py
backend/cookbook_categories/: admin.py  apps.py  models.py  serializers.py  signals.py
backend/donations/: admin.py  apps.py  helpers.py  models.py  signals.py  telesales.py
backend/ecomail/: ecomail.py  helpers.py  models.py  serializers.py  sync.py  sync_ecomail.py  tags.py
backend/event/: admin.py  apps.py  models.py  signals.py
backend/feedback/: admin.py  apps.py  models.py  signals.py
backend/game_book/: admin.py  apps.py  filters.py  forms.py  models.py  signals.py  urls.py  views.py
backend/game_book_categories/: admin.py  apps.py  models.py  signals.py
backend/login_code/: models.py  serializers.py
backend/opportunities/: admin.py  apps.py  models.py  signals.py
backend/other/: admin.py  apps.py  models.py
backend/project/: admin.py  apps.py  settings.py  urls.py  wsgi.py
backend/questionnaire/: admin.py  apps.py  models.py  signals.py
backend/regions/: admin.py  apps.py  models.py  serializers.py  views.py
backend/scripts/: custom_report.py
backend/translation/: generate_translations.py  model_translations.yaml  translate.py  (+1 more)
(+739 files in other folders)
