[project]
name = "bis-backend"
version = "1.0.0"
description = "Brontosaurus Information System - Backend"
requires-python = ">=3.12"
dependencies = [
    # Django and extensions
    "django>=5.2,<6",
    "djangorestframework>=3.15",
    "djangorestframework-gis>=1.0",
    "drf-nested-routers>=0.93",
    "drf-spectacular>=0.26",
    "django-admin-autocomplete-filter>=0.7",
    "django-admin-rangefilter>=0.10",
    "django-autocomplete-light>=3.9",
    "django-bootstrap5>=23.1",
    "django-cleanup>=7.0",
    "django-cors-headers>=3.14",
    "django-filter>=23.2",
    "django-more-admin-filters>=1.15",
    "django-nested-admin>=4.0",
    "django-phonenumber-field>=7.1",
    "django-solo>=2.0",
    "django-tinymce>=3.6",
    "django-oauth-toolkit>=3.2",
    "django-oauth-toolkit-dcr>=0.1",
    "django-mcp-server>=0.5",
    "django-debug-toolbar>=4.0",
    "django-admin-numeric-filter @ git+https://github.com/lukasvinclav/django-admin-numeric-filter.git@c5718f59eea66f67bbaa2ee542206719dfd43df3",
    # Database
    "psycopg2-binary>=2.9",
    # Server
    "gunicorn>=20.1",
    # Data processing
    "numpy>=1.26",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "xlsx2html>=0.4",
    "XlsxWriter>=3.1",
    # PDF
    "weasyprint>=67.0",
    # Images
    "Pillow>=10.1",
    "pyheif>=0.8",
    # API & HTTP
    "requests>=2.29",
    # Monitoring
    "sentry-sdk>=1.21",
    # Utils
    "python-dotenv>=1.0",
    "python-monkey-business>=1.0",
    "PyYAML>=6.0.1",
    "simplejson>=3.19",
    "phonenumbers>=8.13",
    "vokativ>=1.2",
    "unidecode>=1.3",
    "geopy>=2.4",
    # AI
    "groq>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.3",
    "pytest-django>=4.5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = ["backend_static", "media"]

[tool.black]

[tool.isort]
profile = "black"
filter_files = true
